--- a/RK2/.rubocop.yml
+++ b/RK2/.rubocop.yml
@@ -1,3 +1,31 @@
+inherit_from: .rubocop_todo.yml
 
 AllCops:
-  TargetRubyVersion: 2.7
+  DisabledByDefault: true
+
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
+
+Style/SymbolProc:
+  Enabled: false
+
+Lint/FloatComparison:
+  Enabled: false
+
+Style/NonNilCheck:
+  Enabled: false
+
+Style/RescueModifier:
+  Enabled: false
+
+Layout/TrailingEmptyLines:
+  Enabled: false
