--- a/8/Gemfile
+++ b/8/Gemfile
@@ -7,7 +7,7 @@ gem "rails", "~> 7.1.2"
 
 # The original asset pipeline for Rails [https://github.com/rails/sprockets-rails]
 gem "sprockets-rails"
-
+gem "rails-controller-testing"
 # Use sqlite3 as the database for Active Record
 gem "sqlite3", "~> 1.4"
 
